@@ -2859,7 +2859,7 @@ WML_HANDLER_FUNCTION(label, /*event_info*/, cfg)
 	terrain_label label(screen.labels(), cfg.get_config());
 
 	screen.labels().set_label(label.location(), label.text(),
-		label.team_name(), label.colour(), label.visible_in_fog());
+		label.team_name(), label.colour(), label.visible_in_fog(), label.visible_in_shroud());
 }
 
 WML_HANDLER_FUNCTION(heal_unit, event_info, cfg)
